-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 14
-
Component/s: hotspot
-
b07
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8273219 | 11.0.14-oracle | Fairoz Matte | P4 | Resolved | Fixed | b01 |
| JDK-8273232 | 11.0.13-oracle | Fairoz Matte | P4 | Resolved | Fixed | b09 |
| JDK-8271145 | 11.0.13 | Martin Doerr | P4 | Resolved | Fixed | b01 |
| JDK-8275695 | openjdk8u332 | Yi Yang | P4 | Resolved | Fixed | b01 |
| JDK-8317134 | 8u401 | Fairoz Matte | P4 | Resolved | Fixed | b01 |
| JDK-8281133 | na | Yasumasa Suenaga | P4 | Closed | Duplicate |
vmTestbase/nsk/jvmti/DataDumpRequest/datadumpreq001/TestDescription.java
Here's a snippet from the log file:
----------System.out:(9/1690)----------
run [ExecDriver, --java, -agentlib:datadumpreq001=-waittime=5 -verbose=, nsk.jvmti.DataDumpRequest.datadumpreq001]
exec [/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.jdk/jdk-14/fastdebug/bin/java, -XX:MaxRAMPercentage=12, -cp, /scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase/nsk/jvmti/DataDumpRequest/datadumpreq001/TestDescription.d:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/test/lib, -Djava.library.path=/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.test/hotspot/jtreg/native, -agentlib:datadumpreq001=-waittime=5 -verbose=, nsk.jvmti.DataDumpRequest.datadumpreq001]
- datadumpreq001.cpp, 118: setting event callbacks ...
- datadumpreq001.cpp, 124: setting event callbacks done
enabling JVMTI events ...
- datadumpreq001.cpp, 127: enabling the events done
- datadumpreq001.cpp, 77: waiting for DataDumpRequest event...
Timeout refired 480 times
----------System.err:(18/5077)----------
java.lang.AssertionError: [/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.jdk/jdk-14/fastdebug/bin/java, -XX:MaxRAMPercentage=12, -cp, /scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase/nsk/jvmti/DataDumpRequest/datadumpreq001/TestDescription.d:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/test/lib, -Djava.library.path=/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.test/hotspot/jtreg/native, -agentlib:datadumpreq001=-waittime=5 -verbose=, nsk.jvmti.DataDumpRequest.datadumpreq001] exit code is 134
at ExecDriver.main(ExecDriver.java:137)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:567)
at PropertyResolvingWrapper.main(PropertyResolvingWrapper.java:104)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke0(Native Method)
at java.base/jdk.internal.reflect.NativeMethodAccessorImpl.invoke(NativeMethodAccessorImpl.java:62)
at java.base/jdk.internal.reflect.DelegatingMethodAccessorImpl.invoke(DelegatingMethodAccessorImpl.java:43)
at java.base/java.lang.reflect.Method.invoke(Method.java:567)
at com.sun.javatest.regtest.agent.MainWrapper$MainThread.run(MainWrapper.java:127)
at java.base/java.lang.Thread.run(Thread.java:830)
JavaTest Message: Test threw exception: java.lang.AssertionError: [/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.jdk/jdk-14/fastdebug/bin/java, -XX:MaxRAMPercentage=12, -cp, /scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase/nsk/jvmti/DataDumpRequest/datadumpreq001/TestDescription.d:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/test/lib, -Djava.library.path=/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.test/hotspot/jtreg/native, -agentlib:datadumpreq001=-waittime=5 -verbose=, nsk.jvmti.DataDumpRequest.datadumpreq001] exit code is 134
JavaTest Message: shutting down test
STATUS:Failed.`main' threw exception: java.lang.AssertionError: [/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.jdk/jdk-14/fastdebug/bin/java, -XX:MaxRAMPercentage=12, -cp, /scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase/nsk/jvmti/DataDumpRequest/datadumpreq001/TestDescription.d:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/vmTestbase:/scratch/mesos/slaves/a1bab71e-a362-4507-81ed-9c72a04b09cc-S146/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/aff75698-7645-4a7c-9fce-899fade11bae/runs/6faff8e9-fee7-4e29-a6c2-001f738e2821/testoutput/test-support/jtreg_open_test_hotspot_jtreg_vmTestbase_nsk_jvmti/classes/1/test/lib, -Djava.library.path=/scratch/mesos/jib-master/install/jdk-14+6-162/macosx-x64-debug.test/hotspot/jtreg/native, -agentlib:datadumpreq001=-waittime=5 -verbose=, nsk.jvmti.DataDumpRequest.datadumpreq001] exit code is 134
----------rerun:(30/6310)*----------
There are four failures in this sighting: two on macOSX
and two on Linux-X64; four different machines.
- backported by
-
JDK-8271145 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Resolved
-
-
JDK-8273219 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Resolved
-
-
JDK-8273232 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Resolved
-
-
JDK-8275695 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Resolved
-
-
JDK-8317134 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Resolved
-
-
JDK-8281133 jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"
-
- Closed
-
- relates to
-
JDK-8225690 Multiple AttachListener threads can be created
-
- Resolved
-