8227738: jvmti/DataDumpRequest/datadumpreq001 failed due to "exit code is 134"

Reviewed-by: sspitsyn, cjplummer